--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@mui/material": "5.6.0",
     "@mui/system": "5.6.0",
     "@types/masknet__global-types": "workspace:*",
-    "@types/react": "^17",
-    "@types/react-dom": "^17",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "^18",
     "@types/web": "^0.0.61",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -83,7 +83,7 @@
   "pnpm": {
     "overrides": {
       "@types/node": "^17.0.23",
-      "@types/react@18": "^17"
+      "@types/react@18": "17.0.43"
     },
     "onlyBuiltDependencies": []
   }
