--- a/packages/injected-script/package.json
+++ b/packages/injected-script/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "rollup": "^3.28.1",
     "rollup-plugin-swc3": "^0.10.1"
+  },
+  "dependencies": {
+    "@wagmi/core": "^1.4.4",
+    "viem": "^1.16.6"
   }
 }
