--- a/packages/plugins/NextID/package.json
+++ b/packages/plugins/NextID/package.json
@@ -24,6 +24,7 @@
     "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "zod": "^3.22.2"
   }
 }
